--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      working-directory: ./server
 
     steps:
       - name: Chekcout
@@ -21,12 +23,14 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-vsersion: 11
+          java-version: 11
       
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
         shell: bash
+        working-directory: ${{ env.working-directory }}
         
       - name: Build with Gradle
         run: ./gradlew build
         shell: bash
+        working-directory: ${{ env.working-directory }}
