--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,11 +10,13 @@ on:
 
   workflow_dispatch:
 
+env:
+  S3_BUCKET_NAME: bboshap
+  working-directory: ./server
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      working-directory: ./server
 
     steps:
       - name: Chekcout
@@ -34,3 +36,18 @@ jobs:
         run: ./gradlew build
         shell: bash
         working-directory: ${{ env.working-directory }}
+        
+      - name: Make zip file
+        run: zip -r ./$GITHUB_SHA.zip .
+        shell: bash
+        working-directory: ${{ env.working-directory }}
+        
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials/@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+          
+      - name: Upload to S3
+        run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip
