--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,3 +51,4 @@ jobs:
           
       - name: Upload to S3
         run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip
+        working-directory: ${{ env.working-directory }}
