--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,3 +52,7 @@ jobs:
       - name: Upload to S3
         run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip
         working-directory: ${{ env.working-directory }}
+
+      - name: Code deploy
+        run: aws deploy create-deployment --application-name Github-Actions-Deploy --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name Github-Actions-Group --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=$GITHUB_SHA.zip
+        working-directory: ${{ env.working-directory }}
