[Update] Update properties aws와 db 접근을 위한 properties 추가

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.profiles.include[0]=db
+spring.profiles.include[1]=aws
