--- a/server/build.gradle
+++ b/server/build.gradle
@@ -28,6 +28,10 @@ dependencies {
 	implementation 'com.amazonaws:aws-java-sdk-s3'
 	implementation  'mysql:mysql-connector-java'
 	implementation  'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation group: 'io.jsonwebtoken', name:'jjwt-impl', version:'0.11.2'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 }
 
 tasks.named('test') {
