--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.properties.hibernate.format_sql=true
-
+spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.profiles.include[0]=db
 spring.profiles.include[1]=aws
+spring.profiles.include[2]=jwt
