--- a/server/build.gradle
+++ b/server/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	implementation group: 'io.jsonwebtoken', name:'jjwt-impl', version:'0.11.2'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.projectreactor:reactor-spring:1.0.1.RELEASE'
 }
 
 tasks.named('test') {
