--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.
 spring.profiles.include[0]=db
 spring.profiles.include[1]=aws
 spring.profiles.include[2]=jwt
+spring.profiles.include[3]=flask
