--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.13",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.24",
+    "@types/uuid": "^8.3.4",
     "axios": "^0.26.1",
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
@@ -22,6 +23,7 @@
     "recoil": "^0.6.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.6.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
