--- a/client/package.json
+++ b/client/package.json
@@ -2,10 +2,12 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://bboshap.s3.ap-northeast-2.amazonaws.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/express": "^4.17.13",
     "@types/file-saver": "^2.0.5",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
@@ -15,7 +17,9 @@
     "@types/styled-components": "^5.1.24",
     "@types/uuid": "^8.3.4",
     "axios": "^0.26.1",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "express": "^4.17.3",
     "file-saver": "^2.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
