[Update] Update gitignore and properties 키 정보, https 정보 gitignore에 추가 관련 정보 properties에 추가

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -41,3 +41,7 @@ application-aws.properties
 application-db.properties
 application-jwt.properties
 application-flask.properties
+application-https.properties
+
+### keystore ###
+keystore.p12
