--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.profiles.include[0]=db
 spring.profiles.include[1]=aws
 spring.profiles.include[2]=jwt
 spring.profiles.include[3]=flask
+spring.profiles.include[4]=https
