--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -3,7 +3,10 @@ name: test
 on:
   push:
     branches:
-      - server
+      - main
+#   pull_request:
+#     branches:
+#       - server
 
   workflow_dispatch:
 
@@ -44,7 +47,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: ap-northeast-2
           
       - name: Upload to S3
         run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip
